--- a/admin/index.html
+++ b/admin/index.html
@@ -120,10 +120,10 @@
   </script>
   
   <!-- Include custom widgets -->
-  <script src="./widgets/repository-browser-widget.js"></script>
+  <script src="widgets/repository-browser-widget.js"></script>
   
   <!-- Include preview templates -->
-  <script src="./preview-templates.js"></script>
+  <script src="preview-templates.js"></script>
   
   <script>
     // Hide loading indicator when CMS is loaded
