--- a/admin/index.html
+++ b/admin/index.html
@@ -132,8 +132,8 @@
       window.CMS.init({
         // Config options can be passed here if needed
         // For example, to enable local_backend for local development:
-        // config: {
-        //   local_backend: true
+         config: {
+           local_backend: true
         // }
       });
       
